Improve regular graph and add virtual principles
